tests/ui/feature-gates/feature-gate-fmt-debug.rs
#[cfg(fmt_debug = "full")]
//~^ ERROR is experimental
fn main() {

}
